--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://sjaquemate.github.io/boludle",
   "name": "game",
   "version": "0.1.0",
   "private": true,
@@ -27,7 +28,9 @@
     "lint": "prettier --check src",
     "start": "react-scripts start",
     "test": "react-scripts test",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -53,7 +56,8 @@
     "lint-staged": "^12.3.2",
     "postcss": "^8.4.5",
     "prettier": "2.5.1",
-    "tailwindcss": "^3.0.12"
+    "tailwindcss": "^3.0.12",
+    "gh-pages": "^7.20.3"
   },
   "lint-staged": {
     "src/*.{ts,tsx,js,jsx,css,md}": "prettier --write"
