--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://sjaquemate.github.io/boludle",
+  "homepage": "http://sjaquemate.github.io",
   "name": "game",
   "version": "0.1.0",
   "private": true,
