--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-share": "^4.4.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.3"
   },
@@ -52,12 +53,12 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
+    "gh-pages": "^2.1.1",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.2",
     "postcss": "^8.4.5",
     "prettier": "2.5.1",
-    "tailwindcss": "^3.0.12",
-    "gh-pages": "^2.1.1"
+    "tailwindcss": "^3.0.12"
   },
   "lint-staged": {
     "src/*.{ts,tsx,js,jsx,css,md}": "prettier --write"
